Changed rety logic when polling data fails in server error or decode error, fixed using polly lib

--- a/TeraCyteAssignment/TeraCyteAssignment.csproj
+++ b/TeraCyteAssignment/TeraCyteAssignment.csproj
@@ -10,11 +10,11 @@
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
-    <PackageReference Include="CSharpMarkup.WinUI.LiveChartsCore.SkiaSharpView" Version="3.1.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="9.0.7" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.7" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.7" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.7" />
+    <PackageReference Include="Polly" Version="8.6.2" />
   </ItemGroup>
 
   <ItemGroup>
